Fix footer overlap bug on welcome page

--- a/sources/css/welcome.less
+++ b/sources/css/welcome.less
@@ -40,9 +40,4 @@
             font-size: 1.4rem;
         }
     }
-    #c {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-    }
 }
